<?xml version="1.0"?>
<package format="2">
  <name>ai_robotics_lab</name>
  <version>0.0.0</version>
  <description>The AI and Autonomous Systems Labs package</description>
  <maintainer email="charles.lesire@onera.fr">Charles Lesire-Cabaniols</maintainer>
  <author email="charles.lesire@onera.fr">Charles Lesire-Cabaniols</author>
  <author email="corentin.chauffaut@isae-supaero.fr">Corentin Chauffaut</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!--exec_depend>move_to</exec_depend-->
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>python-scipy</exec_depend>


  <export>
  </export>
</package>
